apps/arr/overseerr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: overseerr
    app.kubernetes.io/name: overseerr
