apps/arr/overseerr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
spec:
  rules:
    - host: overseerr.mobrockers.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: overseerr
                port:
                  name: http
            pathType: Prefix
  tls:
    - hosts:
        - overseerr.mobrockers.com
